--- a/app/src/main/res/layout/activity_myorders.xml
+++ b/app/src/main/res/layout/activity_myorders.xml
@@ -7,20 +7,22 @@
     android:layout_height="match_parent"
     tools:context="com.example.hardeep.myproject.user.myorders">
 
-    <ProgressBar
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <com.airbnb.lottie.LottieAnimationView
+        android:layout_width="300dp"
+        android:layout_height="300dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="200dp"
-        style="@style/Widget.AppCompat.ProgressBar"
+        app:lottie_rawRes="@raw/laundry"
+        android:layout_centerVertical="true"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"
         android:id="@+id/progressbarmyorders"
         />
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/user_order_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-    </android.support.v7.widget.RecyclerView>
+    </androidx.recyclerview.widget.RecyclerView>
 
 </RelativeLayout>
