--- a/app/src/main/res/layout/activity_order_list.xml
+++ b/app/src/main/res/layout/activity_order_list.xml
@@ -48,13 +48,13 @@
             android:text="Price" />
 
 
-        <android.support.v7.widget.RecyclerView
+        <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/item_rec_view"
             android:layout_width="match_parent"
             android:layout_height="200dp"
             android:layout_marginTop="30dp">
 
-        </android.support.v7.widget.RecyclerView>
+        </androidx.recyclerview.widget.RecyclerView>
 
         <TextView
             android:layout_width="wrap_content"
