--- a/app/src/main/res/layout/fragment_rejected_orders.xml
+++ b/app/src/main/res/layout/fragment_rejected_orders.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/bbck"
     android:layout_height="match_parent"
     tools:context=".RejectedOrders">
@@ -17,12 +18,24 @@
         android:layout_centerVertical="true"
         android:id="@+id/noordersrej"
         />
-    <android.support.v7.widget.RecyclerView
+
+    <com.airbnb.lottie.LottieAnimationView
+        android:layout_width="300dp"
+        android:layout_height="300dp"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
+        app:lottie_rawRes="@raw/laundry"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"
+        android:id="@+id/rejectedlottie"
+        />
+
+    <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/rejectedordersrecyclerview"
         android:layout_marginTop="?attr/actionBarSize"
         >
-    </android.support.v7.widget.RecyclerView>
+    </androidx.recyclerview.widget.RecyclerView>
 
 </RelativeLayout>
