--- a/app/src/main/res/layout/activity_order_details_request.xml
+++ b/app/src/main/res/layout/activity_order_details_request.xml
@@ -22,7 +22,7 @@
             android:textSize="30sp"
             android:textStyle="bold" />
 
-        <android.support.v7.widget.CardView
+        <androidx.cardview.widget.CardView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/l5"
@@ -76,18 +76,18 @@
 
             </LinearLayout>
 
-            <android.support.v7.widget.RecyclerView
+            <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/orderlistrecyclerview"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/l7"
                 android:layout_marginTop="10dp">
 
-            </android.support.v7.widget.RecyclerView>
+            </androidx.recyclerview.widget.RecyclerView>
 
         </RelativeLayout>
 
-        </android.support.v7.widget.CardView>
+        </androidx.cardview.widget.CardView>
 
 
         <TextView
@@ -113,7 +113,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="150dp"
                 android:layout_weight="1"
-                android:background="@drawable/layout_back_simple"
                 android:gravity="center"
                 android:orientation="vertical"
                 android:weightSum="5">
@@ -134,6 +133,7 @@
                         android:id="@+id/radioadd1"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:buttonTint="#FFFFFF"
                         android:layout_marginLeft="20dp" />
 
                 </LinearLayout>
@@ -144,7 +144,9 @@
                     android:layout_height="0dp"
                     android:layout_weight="3"
                     android:gravity="start"
-                    android:paddingStart="5dp"
+                    android:padding="5dp"
+                    android:layout_margin="5dp"
+                    android:background="@drawable/editt"
                     android:textColor="#FFFFFF"
                     android:textSize="15sp" />
 
@@ -161,6 +163,7 @@
                         android:layout_gravity="center"
                         android:background="@drawable/buttonview"
                         android:text="Edit"
+                        android:textStyle="bold"
                         android:textColor="#FFFFFF"
                         android:textSize="10sp" />
 
@@ -172,7 +175,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="150dp"
                 android:layout_weight="1"
-                android:background="@drawable/layout_back_simple"
                 android:gravity="center"
                 android:orientation="vertical"
                 android:weightSum="5">
@@ -194,6 +196,7 @@
                         android:id="@+id/radioadd2"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:buttonTint="#FFFFFF"
                         android:layout_marginLeft="20dp" />
                 </LinearLayout>
 
@@ -205,7 +208,9 @@
                     android:layout_weight="3"
                     android:gravity="start"
                     android:textColor="#FFFFFF"
-                    android:paddingStart="5dp"
+                    android:padding="5dp"
+                    android:layout_margin="5dp"
+                    android:background="@drawable/editt"
                     android:textSize="15sp" />
 
                 <LinearLayout
@@ -221,6 +226,7 @@
                         android:layout_gravity="center"
                         android:background="@drawable/buttonview"
                         android:text="Edit"
+                        android:textStyle="bold"
                         android:textColor="#FFFFFF"
                         android:textSize="10sp" />
 
@@ -239,6 +245,7 @@
             android:layout_centerHorizontal="true"
             android:layout_marginTop="40dp"
             android:layout_marginBottom="20dp"
+            android:layout_alignParentBottom="true"
             android:background="@drawable/buttonview"
             android:padding="10dp"
             android:text="Request Order"
