--- a/app/src/main/res/layout/activity_view_rejected.xml
+++ b/app/src/main/res/layout/activity_view_rejected.xml
@@ -24,7 +24,7 @@
         android:textSize="30dp"
         android:textStyle="bold" />
 
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
         android:id="@+id/card"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -76,7 +76,7 @@
 
             </LinearLayout>
 
-            <android.support.v7.widget.RecyclerView
+            <androidx.recyclerview.widget.RecyclerView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_below="@+id/lll"
@@ -84,7 +84,7 @@
                 android:id="@+id/viewrejectedrecyclerview"
                 >
 
-            </android.support.v7.widget.RecyclerView>
+            </androidx.recyclerview.widget.RecyclerView>
 
 
             <LinearLayout
@@ -126,7 +126,7 @@
             </LinearLayout>
         </RelativeLayout>
 
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 
         <TextView
             android:layout_width="match_parent"
@@ -141,7 +141,7 @@
             android:id="@+id/ttt"
             />
 
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/l12"
@@ -165,7 +165,7 @@
             />
 
 
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 
     </RelativeLayout>
 
