--- a/app/src/main/res/layout/fragment_previous_orders.xml
+++ b/app/src/main/res/layout/fragment_previous_orders.xml
@@ -5,13 +5,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="com.example.hardeep.myproject.user.fragments.Previous_orders">
 
-    <android.support.v4.view.ViewPager
+    <androidx.viewpager.widget.ViewPager
         android:id="@+id/previousordersviewpager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         />
 
-    <android.support.design.widget.TabLayout
+    <com.google.android.material.tabs.TabLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
         app:tabMode="fixed"
@@ -20,6 +20,6 @@
         android:theme="@style/AppTheme.PopupOverlay1"
         android:elevation="20dp">
 
-    </android.support.design.widget.TabLayout>
+    </com.google.android.material.tabs.TabLayout>
 
 </RelativeLayout>
