--- a/app/src/main/res/layout/fragment_user_profile_edit.xml
+++ b/app/src/main/res/layout/fragment_user_profile_edit.xml
@@ -21,18 +21,18 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/rel1">
 
-        <android.support.v7.widget.RecyclerView
+        <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerview"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:scrollbars="vertical">
 
-        </android.support.v7.widget.RecyclerView>
+        </androidx.recyclerview.widget.RecyclerView>
 
 
     </RelativeLayout>
 
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
         android:id="@+id/rel1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -44,6 +44,8 @@
             android:layout_width="match_parent"
             android:layout_height="170dp"
             android:background="#FFFFFF"
+            android:visibility="gone"
+            android:id="@+id/editlayout"
             android:padding="10dp">
 
             <de.hdodenhof.circleimageview.CircleImageView
@@ -76,7 +78,7 @@
 
         </RelativeLayout>
 
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 
     <Button
         android:id="@+id/signout"
@@ -88,6 +90,7 @@
         android:gravity="center"
         android:layout_alignParentBottom="true"
         android:text="Sign Out"
+        android:visibility="gone"
         android:textColor="@android:color/white"
         android:textSize="20dp"
         android:textStyle="bold" />
