--- a/app/src/main/res/layout/nav_header_the_user_profile.xml
+++ b/app/src/main/res/layout/nav_header_the_user_profile.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="@dimen/nav_header_height"
@@ -7,10 +7,23 @@
     android:gravity="bottom"
     android:orientation="vertical"
     android:paddingLeft="10dp"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingRight="10dp"
+    android:paddingTop="10dp"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
+    <ProgressBar
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:id="@+id/progressbar"
+        android:layout_alignParentEnd="true"
+        android:visibility="gone"
+        android:layout_alignParentTop="true"
+        android:indeterminateDrawable="@drawable/progressbar"/>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/circle_pic"
         android:layout_width="80dp"
@@ -18,6 +31,7 @@
         android:layout_marginLeft="0dp"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         android:scaleType="centerCrop"
+        android:src="@drawable/round"
         app:civ_border_color="#FFFFFF"
         app:civ_border_width="1dp" />
 
@@ -41,5 +55,5 @@
         android:layout_marginBottom="20dp"
 
         />
-
-</LinearLayout>
+    </LinearLayout>
+</RelativeLayout>
