--- a/app/src/main/res/layout/activity_editpassword.xml
+++ b/app/src/main/res/layout/activity_editpassword.xml
@@ -80,6 +80,7 @@
         android:layout_below="@+id/renewpass"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="70dp"
+        android:foreground="?attr/selectableItemBackground"
         android:background="@drawable/buttonview"
         android:text="Change Password"
         android:textColor="@android:color/white" />
