--- a/app/src/main/res/layout/activity_email_verification.xml
+++ b/app/src/main/res/layout/activity_email_verification.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".EmailVerification"
-    android:background="@drawable/backk"
+    android:background="@drawable/bbck"
     android:padding="20dp">
 
 
@@ -29,6 +29,7 @@
         android:background="@drawable/buttonview"
         android:padding="10dp"
         android:id="@+id/verifybutton"
+        android:foreground="?attr/selectableItemBackground"
         android:textColor="#FFFFFF"
         android:layout_below="@+id/verifyemailfirst"
         android:layout_marginTop="50dp"
@@ -98,6 +99,7 @@
         android:background="@drawable/buttonview"
         android:layout_marginBottom="20dp"
         android:textColor="#FFFFFF"
+        android:foreground="?attr/selectableItemBackground"
         android:padding="10dp"
         />
 
