--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/backk"
+    android:background="@drawable/bbck"
     tools:context=".ForgotPassword">
 
 
@@ -46,6 +46,7 @@
             android:layout_marginTop="30dp"
             android:background="@drawable/buttonview"
             android:padding="15dp"
+            android:foreground="?attr/selectableItemBackground"
             android:text="Reset Password"
             android:textColor="#FFFFFF"
             android:textSize="18sp"
