--- a/app/src/main/res/layout/activity_newaccount.xml
+++ b/app/src/main/res/layout/activity_newaccount.xml
@@ -19,6 +19,7 @@
             android:layout_margin="10dp"
             android:src="@drawable/bckbutton"
             android:id="@+id/bckbutton"
+            android:foreground="?attr/selectableItemBackground"
             />
 
         <TextView
@@ -42,6 +43,7 @@
             android:backgroundTint="#FFFFFF"
             android:clickable="true"
             android:layout_marginTop="30dp"
+            android:foreground="?attr/selectableItemBackground"
             android:onClick="Choose_image"
             android:scaleType="centerCrop"
             android:src="@mipmap/profilepic"
@@ -133,6 +135,7 @@
             android:paddingRight="10dp"
             android:maxLines="1"
             android:singleLine="true"
+            android:inputType="textEmailAddress"
             android:textColor="@android:color/black" />
 
 
@@ -183,7 +186,6 @@
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
             android:background="@drawable/editt"
-            android:inputType="textPassword"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
             android:singleLine="true"
@@ -198,6 +200,7 @@
             android:layout_marginTop="50dp"
             android:layout_marginBottom="20sp"
             android:background="@drawable/buttonview"
+            android:foreground="?attr/selectableItemBackground"
             android:text="@string/create_account"
             android:textColor="@android:color/white"
             android:textSize="18sp"
