--- a/app/src/main/res/layout/format_order.xml
+++ b/app/src/main/res/layout/format_order.xml
@@ -1,15 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:card_view="http://schemas.android.com/tools"
-
     android:id="@+id/cardview"
     android:layout_width="match_parent"
     android:layout_height="200dp"
     android:layout_margin="10dp"
     android:divider="@android:color/transparent"
     android:dividerHeight="0.0px"
+    android:foreground="?attr/selectableItemBackground"
     app:cardBackgroundColor="#FFFFFF"
     app:cardCornerRadius="10dp"
     app:cardElevation="10dp">
@@ -17,20 +15,19 @@
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:orientation="vertical"
         android:paddingStart="15dp"
         android:paddingTop="10dp"
-        android:paddingBottom="10dp"
-        android:orientation="vertical">
+        android:paddingBottom="10dp">
 
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="ORDER"
-            android:textSize="50sp"
-            android:textStyle="bold"
             android:textColor="#000"
-            />
+            android:textSize="50sp"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/orderid_user"
@@ -49,20 +46,20 @@
             android:id="@+id/cost_user"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
             android:gravity="center_horizontal"
             android:text="cost"
-            android:layout_marginTop="5dp"
-            android:textStyle="bold"
             android:textColor="#000000"
-            android:textSize="25sp" />
+            android:textSize="25sp"
+            android:textStyle="bold" />
 
 
         <TextView
             android:id="@+id/reaason"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="reason"
             android:layout_marginTop="5dp"
+            android:text="reason"
             android:textSize="20dp" />
 
 
