--- a/app/src/main/res/layout/format_recy_view_item_settings.xml
+++ b/app/src/main/res/layout/format_recy_view_item_settings.xml
@@ -5,6 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardElevation="10dp"
     android:layout_margin="8dp"
+    android:foreground="?attr/selectableItemBackground"
     app:cardCornerRadius="10dp"
     app:cardBackgroundColor="#FFFFFF"
     >
