--- a/app/src/main/res/layout/user_order_format.xml
+++ b/app/src/main/res/layout/user_order_format.xml
@@ -8,6 +8,7 @@
     android:layout_centerHorizontal="true"
     app:cardCornerRadius="10dp"
     app:cardElevation="10dp"
+    android:foreground="?attr/selectableItemBackground"
     android:layout_margin="10dp">
 
     <RelativeLayout
